--- a/monitor.html
+++ b/monitor.html
@@ -48,7 +48,7 @@
 
         .content {padding: 0 20px;}
 
-        .videoBox {width: 100%;height: 180px; margin-left: auto; margin-right: auto; margin-top: 10px;}
+        .videoBox {width: 100%;height: 180px; margin-left: auto; margin-right: auto; margin: 10px 0;overflow: hidden;}
 
         .video-js {width: 100%;height: 100%;position: relative}
 
@@ -126,9 +126,6 @@
     <span>智慧大棚</span>
 </div>
 <div class="content clearfixed">
-    <div class="videoBox">
-            <video id="my-video" webkit-playsinline playsinline class="video-js vjs-default-skin vjs-big-play-centered"></video>
-    </div>
     <div class="tabBox">
         <div class="choose">
             <div class="cho1 active">1号大棚</div>
@@ -144,6 +141,9 @@
                 <button class="whice whice4">2号大棚B点观测站</button>
             </div>
         </div>
+    </div>
+    <div class="videoBox">
+            <video id="my-video" webkit-playsinline playsinline class="video-js vjs-default-skin vjs-big-play-centered"></video>
     </div>
     <div class="line">数据监测</div>
     <div class="fourBtn">
@@ -208,7 +208,8 @@
 <script src="js/echarts.custom.min.js"></script>
 <script>
     var videoWidth = document.body.clientWidth - 40;
-    $(".videoBox").height(videoWidth / 16 * 9 + 'px');
+    // 视频 分辨率 640 * 368 ~~ 40  * 23
+    $(".videoBox").height(videoWidth / 40 * 23 + 'px');
 
     function drawCanvas(options, timeDate, data1, data2, data3) {
         var dom = document.getElementById("container");
@@ -439,6 +440,7 @@
                 $(this).siblings().removeClass('active');
                 var fNum = $(".fourBtn .active").attr('class').toString().substring(4, 5);
                 if (index === 0) {
+                    siteA();
                     $(".tab > div").eq(0).addClass('active');
                     $(".tab > div").eq(1).removeClass('active');
                     $(".whice1").attr('class', 'whice whice1 active');
@@ -446,6 +448,7 @@
                     siteId = 1;
                     getWeatherData(temOptions, 1, fNum);
                 } else {
+                    siteB();
                     $(".tab > div").eq(1).addClass('active');
                     $(".tab > div").eq(0).removeClass('active');
                     $(".whice3").attr('class', 'whice whice3 active');
@@ -481,19 +484,42 @@
         })
     });
 
-    options = {
+    // 站点A
+
+    var options = {
         preload: 'metadata',
         controls: false,
         loop: true,
-        poster: 'https://img.snzfnm.com/greenhouse.mp4?vframe/jpg/offset/1',
+        poster: 'https://img.snzfnm.com/zhdp1.mp4?vframe/jpg/offset/1',
         sources: [{
-            src: 'https://img.snzfnm.com/greenhouse.mp4',
+            src: 'https://img.snzfnm.com/zhdp1.mp4',
             type: 'video/mp4'
         }]
     }
+
+    function siteA () {
+
+        myPlayer.src("https://img.snzfnm.com/zhdp1.mp4");
+
+        myPlayer.play();
+    }
+    // 站点B
+    function siteB() {
+
+        myPlayer.src("https://img.snzfnm.com/zhdp2.mp4");
+
+        myPlayer.play();
+    }
+
+    // 默认初始为站点A
     var myPlayer = videojs('my-video', options, function onPlayerReady() {
         this.play();
     });
+
+
+
+
+
 </script>
 </body>
 </html>
