--- a/videoDetail.html
+++ b/videoDetail.html
@@ -85,12 +85,12 @@
 <script src="js/base.js"></script>
 <script src="js/video.min.js"></script>
 <script>
-    var options = {}
-
-    var disasterId = localStorage.getItem('disasterid') || ''
+    var options = {};
+    var url = window.location.href;
+    var disasterId = url.split("?")[1].split("=")[1] || '';
 
     var videoWidth = document.body.clientWidth - 40;
-    $(".videoBox").height(videoWidth / 3 * 4 + 'px')
+    $(".videoBox").height(videoWidth / 3 * 4 + 'px');
 
     $.ajax({
         type: 'GET',
@@ -98,20 +98,20 @@
         dataType: 'json',
         data: {
             disasterId: disasterId,
-            withPics: true,
+            withPics: true
         },
         success: function (data) {
             if (data.status === 'true') {
                 var inner = '';
-                $(".title p").text(data.title)
-                $(".article p").text(data.content)
-                $(".reference .time").text(data.updateTime)
-                $(".reference .userName").text(data.userName)
-                $(".reference .address").text(data.address)
+                $(".title p").text(data.title);
+                $(".article p").text(data.content);
+                $(".reference .time").text(data.updateTime);
+                $(".reference .userName").text(data.userName);
+                $(".reference .address").text(data.address);
                 for (var i = 0, lens = data.imgPaths.length; i < lens; i++) {
                     inner += `<img src='${data.imgPaths[i]}' alt='暂无图片'>`
                 }
-                $(".picture").html(inner)
+                $(".picture").html(inner);
 
                 if(data.videoPaths.length > 0 && data.videoPaths[0].length > 1) {
                     options = {
@@ -128,6 +128,7 @@
                         // videojs.log('开始!');
 
                         // In this context, `this` is the player that was created by Video.js.
+
                         this.play();
 
                         // How about an event listener?
@@ -135,10 +136,10 @@
                         //     videojs.log('结束!');
                         // });
                     });
-                    $(".videoBox").css('display', 'block')
+                    $(".videoBox").css('display', 'block');
                 }
             } else {
-                alert(data.msg)
+                alert(data.msg);
             }
         },
         error: function (xhr, type) {
